--- a/rtl.css
+++ b/rtl.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:     Flying Horse Club Divi
+Theme Name:     Flying Horse Club Divi Child
 Template:       
 
 Right to Left text support.
