--- a/style.css
+++ b/style.css
@@ -9,5 +9,5 @@ Template:       Divi
 
 /*Photo Gallery pages */
 .photo_gallery-template-default #main-content {
-    background-color: #F1F1E6;
+  background-color: #f1f1e6;
 }
