More critical error debugging

--- a/rtl.css
+++ b/rtl.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:     Flying Horse Club Divi Child
+Theme Name:     Flying Horse Club Divi
 Template:       
 
 Right to Left text support.
