--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
 /*
-Theme Name:     Flying Horse Club Divi Child
+Theme Name:     Flying Horse Club Divi
 Description:    
 Author:         Chris Loidolt
 Template:       Divi
 
 (optional values you can add: Theme URI, Author URI, Version, License, License URI, Tags, Text Domain)
 */
-
-/*Photo Gallery pages */
-.photo_gallery-template-default #main-content {
-  background-color: #f1f1e6;
-}
